# code-interpreter

./: .dockerignore  README.md  pyproject.toml
.cursor/rules/: global.mdc  librechat-endpoints.mdc
app/: main.py
app/api/: auth.py  base.py  librechat.py
app/models/: base.py
app/services/: cleanup.py  database.py  docker_executor.py  file_manager.py
app/shared/: config.py
app/utils/: read_upload.py
tests/: conftest.py
tests/librechat/: test_librechat_file_operations.py
tests/main/: test_auth.py  test_clean_output.py  test_cleanup.py  test_execution_timeout.py  test_file_operations.py  test_models.py  test_python_code_execution.py
