[project]
name = "code-interpreter"
version = "0.1.0"
description = "LibreChat compatible code interpreter"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.8",
    "python-multipart>=0.0.9",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.0",
    "aiofiles>=24.1.0",
    "python-dotenv>=1.0.1",
    "docker>=7.1.0",
    "aiodocker>=0.21.0",
    "aiosqlite>=0.21.0",
    "python-magic>=0.4.27",
    "loguru>=0.7.3",
    "nanoid>=2.0.0",
    "pyjwt[crypto]>=2.10.1",
]

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio", "httpx"]

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
addopts = "-s -vv"
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
testpaths = ["tests"]
asyncio_mode = "auto"
